fix(ui): fix ToC behind modal dialog
If a modal dialog is opened angular applies an additional class to the root html element which overwrites some css attributes.
This will break sticky elements like the ToC for example.

Closes: #154

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -311,3 +311,9 @@ a {
   font-size: 12px;
   color: var(--acccent-contrast-60);
 }
+
+.cdk-global-scrollblock {
+  position: initial;
+  width: initial;
+  overflow: hidden;
+}
